[rohan]Successfully applied abstraction concept

--- a/RemapOOP'sConcept/RemapOOP'sConcept.csproj
+++ b/RemapOOP'sConcept/RemapOOP'sConcept.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AbstractAnimal.cs" />
     <Compile Include="Calculator.cs" />
     <Compile Include="MethodOverloading.cs" />
     <Compile Include="Person.cs" />
