--- a/RemapOOP'sConcept/RemapOOP'sConcept.csproj
+++ b/RemapOOP'sConcept/RemapOOP'sConcept.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Shape.cs" />
+    <Compile Include="VariableTypesDemo.cs" />
     <Compile Include="Vehicle.cs" />
   </ItemGroup>
   <ItemGroup>
